tests/org.eclipse.php.core.tests/workspace/errors/php7/invalidConstantExpression2.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
$test = 1;
class Foo {
    const BAR = $test::T;
}
?>
--EXPECT--
[line=4, start=45, end=50] Dynamic class names are not allowed in compile-time class constant references
